[project]
name = "breakthrough"
version = "0.1.0"
description = ""
authors = [
    {name = "'Gilad Barnea'", email = "giladbrn@gmail.com"},
]
dependencies = [
    "-e git+https://github.com/mooz/xkeysnail.git#egg=xkeysnail",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
